# BD_LAB_3

./: .gitignore  README.md  docker-compose.yml
four_bench/: Dockerfile  config.json  main.py  pyproject.toml  sqlalchemydb
four_bench/four_bench/: config.py
four_bench/four_bench/base_class/: __init__.py  database.py
four_bench/four_bench/duckdb_bench/: __init__.py  duck_db.py
four_bench/four_bench/pandasdb_bench/: __init__.py  pandas_db.py
four_bench/four_bench/psycopg2db_bench/: __init__.py  psycopg2_db.py
four_bench/four_bench/sqlalchemydb_bench/: __init__.py  sqlalchemy_db.py
four_bench/four_bench/sqlitedb_bench/: __init__.py  sqlite_db.py
four_bench/four_bench/utils/: __init__.py  results_plot.py
